syntax = "proto3";

package actors;

option java_package = "com.getlipa.eventstore.actors";

import "common.proto";
import "google/protobuf/timestamp.proto";


message Command {
  common.Payload payload = 1;
  bytes id = 2;
  bytes causationId = 3;
  bytes correlationId = 4;
  google.protobuf.Timestamp createdAt = 5;
}

message Result {
  common.Payload payload = 1;
  bytes id = 2;
  bytes causationId = 3;
  bytes correlationId = 4;
  google.protobuf.Timestamp createdAt = 5;
}